--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -52,3 +52,43 @@ button {
   color: white;
   text-decoration: underline;
 }
+
+
+.container {
+  text-align: center;
+  padding: 40px;
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.95);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  max-width: 600px;
+  margin: auto;
+  margin-top: 10%;
+}
+
+.title {
+  color: #7439db;
+  font-size: 28px;
+  margin-bottom: 20px;
+}
+
+.text {
+  color: #333;
+  font-size: 16px;
+  margin-bottom: 30px;
+}
+
+.button {
+  padding: 15px 30px;
+  border: none;
+  border-radius: 5px;
+  background: #7439db;
+  color: #fff;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 16px;
+  transition: background 0.3s;
+}
+
+.button:hover {
+  background: #5a2eaf;
+}
